--- a/README.me
+++ b/README.me
@@ -12,7 +12,7 @@ The server portion of the app tracks all users with a quadtree data structure th
 ![spppq5](https://cloud.githubusercontent.com/assets/7958636/8152700/7c582ffa-12d5-11e5-8aa8-5b2639e4cfc0.gif)
 
 All photos are uploaded to an Amazon s3 bucket using a temporary signed policy that allows uploads from the devices and expires after a limited time. The server must sign and provide this policy to the client when a photo is taken, ensuring that proper security is upheld and preventing mass uploads of data or other manipulation.
-<img src="https://cloud.githubusercontent.com/assets/7958636/8152686/6beff634-12d5-11e5-9e4d-4fcb474a715c.png">
+![ripplePhoto](https://cloud.githubusercontent.com/assets/7958636/8152686/6beff634-12d5-11e5-9e4d-4fcb474a715c.png")
 
 Mobile Client Structure
 
